--- a/ttc-application.html
+++ b/ttc-application.html
@@ -1,12 +1,12 @@
 ---
 layout: blank
-title: Certified Mana Movement Facilitator Teacher Training Application
+title:  Application
 seo: 
   hide-from-google: true
 ---
 
 <section class="p-10p">
-    <h1 class="text-lg-serif text-feature mb-12">Liberation Through Movement Mentorship Application</h1>
+    <h1 class="text-lg-serif text-feature mb-12">Mana Movement Facilitator Application</h1>
 
     <form id="mentorship-application" name="mentorship-application" method="post" data-netlify="true"
         action="/application-ttc-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
@@ -16,17 +16,6 @@ seo:
             <label>Don’t fill this out if you're human: <input name="bot-field"></label>
         </p>
 
-        <p class="mb-4">Do you want to feel more free in your body and empowered in your life?</p>
-        <div class="mb-4">
-            <label class="block mb-2">
-                <input type="radio" name="Do_you_want_to_feel_more_free_in_your_body_and_empowered_in_your_life"
-                    value="Yes" class="mr-2"> Yes
-            </label>
-            <label class="block">
-                <input type="radio" name="Do_you_want_to_feel_more_free_in_your_body_and_empowered_in_your_life"
-                    value="No" class="mr-2"> No
-            </label>
-        </div>
 
         <!-- Name -->
         <fieldset class="mt-12">
@@ -58,24 +47,23 @@ seo:
             </div>
         </fieldset>
 
-        <!-- Embodiediment Experience -->
+        <!-- Mana Movement Frequency -->
         <fieldset class="mt-12">
-            <legend class="mb-2">Share about your experience with embodiment work, movement & dance practices, and
-                personal development work.</legend>
+            <legend class="mb-2">How long, and in what frequency have you been practicing Mana Movement?</legend>
             <div>
                 <label class="block">
-                    <textarea name="Experience_with_embodiment_work" required
+                    <textarea name="Frequency_practicing_mana_movement" required
                         class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
                 </label>
             </div>
         </fieldset>
 
-        <!-- What is your Why? -->
+        <!-- Mana Movement Experience -->
         <fieldset class="mt-12">
-            <legend class="mb-2">What feeds your inspiration to join the mentorship program? What is your WHY?</legend>
+            <legend class="mb-2">Tell me a bit more about your experience with Mana Movement. What personal benefits have you received from the practice?</legend>
             <div>
                 <label class="block">
-                    <textarea name="What_is_your_WHY" required class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
+                    <textarea name="What_is_your_experience_with_Mana_Movement" required class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
                 </label>
             </div>
         </fieldset>
@@ -91,177 +79,74 @@ seo:
             </div>
         </fieldset>
 
-        <!-- Priority -->
-        <fieldset class="mt-12">
-            <legend class="mb-2">
-                On a scale of 1 to 10, how much of a priority is it for you to focus on your personal empowerment and
-                liberation journey right now?
-                <br><em>(0: not a priority at all - 10: this is the most important focus in my life right now)</em>
-            </legend>
-            <div class="flex justify-between items-center">
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="0" class="mb-1">
-                    <span class="block">0</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="1" class="mb-1">
-                    <span class="block">1</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="2" class="mb-1">
-                    <span class="block">2</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="3" class="mb-1">
-                    <span class="block">3</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="4" class="mb-1">
-                    <span class="block">4</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="5" class="mb-1">
-                    <span class="block">5</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="6" class="mb-1">
-                    <span class="block">6</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="7" class="mb-1">
-                    <span class="block">7</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="8" class="mb-1">
-                    <span class="block">8</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="9" class="mb-1">
-                    <span class="block">9</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Personal_empowerment_priority" value="10" class="mb-1">
-                    <span class="block">10</span>
-                </label>
-            </div>
-        </fieldset>
 
-        <!-- What is missing? -->
+        <!-- Completed Courses -->
         <fieldset class="mt-12">
             <legend class="mb-2">
-                What area do you feel is missing for you to be able to live in full liberation and power?
+                Mark all Mana Movement Offerings have you completed:
             </legend>
             <div>
                 <label class="block mb-2">
-                    <input type="checkbox" name="Missing_areas[]" value="Emotional Mastery" class="mr-2">
-                    Emotional Mastery
+                    <input type="checkbox" name="Completed[]" value="Mana Movement Foundations" class="mr-2">
+                    Mana Movement Foundations
                 </label>
                 <label class="block mb-2">
-                    <input type="checkbox" name="Missing_areas[]" value="Having a loving relationship with my body"
+                    <input type="checkbox" name="Completed[]" value="Mana Movement Full Course"
                         class="mr-2">
-                    Having a loving relationship with my body
+                        Mana Movement Full Course
                 </label>
                 <label class="block mb-2">
-                    <input type="checkbox" name="Missing_areas[]"
-                        value="Ability to show up in the world in my full authentic expression" class="mr-2">
-                    Ability to show up in the world in my full authentic expression
+                    <input type="checkbox" name="Completed[]"
+                        value="Mana Movement Maternity" class="mr-2">
+                        Mana Movement Maternity
                 </label>
                 <label class="block mb-2">
-                    <input type="checkbox" name="Missing_areas[]"
-                        value="Tools to use on a daily basis to reconnect with my true self" class="mr-2">
-                    Tools to use on a daily basis to reconnect with my true self
+                    <input type="checkbox" name="Completed[]"
+                        value="confiDance" class="mr-2">
+                        confiDance
                 </label>
-                <label class="block">
-                    <input type="checkbox" name="Missing_areas[]" value="Other" id="otherCheckbox1" class="mr-2">
-                    Other (please specify)
+
+                <label class="block mb-2">
+                    <input type="checkbox" name="Completed[]"
+                        value="YouTube Mana Movement Practices" class="mr-2">
+                        YouTube Mana Movement Practices
                 </label>
-                <input type="text" name="Other_missing_area" id="otherText1"
-                    class="w-full px-1 py-2 border bg-transparent border-white text-feature mt-2 hidden" placeholder="Please specify" placeholder="Please specify" disabled>
+
+                <label class="block mb-2">
+                    <input type="checkbox" name="Completed[]"
+                        value="LTM Mentorship Program" class="mr-2">
+                        LTM Mentorship Program
+                </label>
+            
             </div>
         </fieldset>
 
-        <script>
-            document.getElementById('otherCheckbox1').addEventListener('change', function () {
-                var otherText = document.getElementById('otherText1');
-                if (this.checked) {
-                    otherText.classList.remove('hidden');
-                    otherText.disabled = false;
-                } else {
-                    otherText.classList.add('hidden');
-                    otherText.disabled = true;
-                }
-            });
-        </script>
+
+        <!-- Why -->
+        <fieldset class="mt-12">
+            <legend class="mb-2">Why do you feel inspired to become a certified Mana Movement Facilitator?</legend>
+            <div>
+                <label class="block">
+                    <textarea name="Why_do_you_feel_inspired_to_become_a_certified_Mana_Movement_Facilitator?" required class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
+                </label>
+            </div>
+        </fieldset>
+
 
         <!-- Are you ready? -->
-        <p class="mt-12">Do you feel ready and inspired to fill the missing pieces and come back to wholeness?</p>
+        <p class="mt-12">This training will be an intensive deep dive and require your active participation for the 16-week period. Do you have at least 8 hours a week to devote to studying, learning, and completing assigned homework for this training?</p>
         <div>
             <label class="block mb-2">
-                <input type="radio" name="Ready_to_fill_missing_pieces" value="Yes" class="mr-2"> Yes
+                <input type="radio" name="Availability" value="Yes" class="mr-2"> Yes
             </label>
             <label class="block">
-                <input type="radio" name="Ready_to_fill_missing_pieces" value="No" class="mr-2"> No
+                <input type="radio" name="Availability" value="No" class="mr-2"> No
             </label>
         </div>
 
-        <!-- Availability -->
-        <fieldset class="mt-12">
-            <legend class="mb-2">
-                On a scale of 1 to 10, how much time and energy do you want to devote to your journey back home to your
-                personal power and liberation?
-                <br><em>(0: None at all, I don’t have enough time - 10: as much as it takes, this is my priority)</em>
-            </legend>
-            <div class="flex justify-between items-center">
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="0" class="mb-1">
-                    <span class="block">0</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="1" class="mb-1">
-                    <span class="block">1</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="2" class="mb-1">
-                    <span class="block">2</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="3" class="mb-1">
-                    <span class="block">3</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="4" class="mb-1">
-                    <span class="block">4</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="5" class="mb-1">
-                    <span class="block">5</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="6" class="mb-1">
-                    <span class="block">6</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="7" class="mb-1">
-                    <span class="block">7</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="8" class="mb-1">
-                    <span class="block">8</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="9" class="mb-1">
-                    <span class="block">9</span>
-                </label>
-                <label class="block text-center">
-                    <input type="radio" name="Time_and_energy_devotion" value="10" class="mb-1">
-                    <span class="block">10</span>
-                </label>
-            </div>
-        </fieldset>
 
         <!-- Commitment -->
-        <p class="mt-12">I require a time investment of at least 8 hours per week from women to ensure positive and
-            life-lasting shifts. Given this makes sense for you, are you able to allocate this time right now?</p>
+        <p class="mt-12">This training will be an intensive deep dive and require your active participation for the 16-week period. Do you have at least 8 hours a week to devote to studying, learning, and completing assigned homework for this training?</p>
         <div>
             <label class="block mb-2">
                 <input type="radio" name="Time_investment_commitment" value="Yes" class="mr-2"> Yes
@@ -271,25 +156,9 @@ seo:
             </label>
         </div>
 
-        <!-- When can you start? -->
-        <p class="mt-12">If accepted into the Liberation Through Movement Mentorship, how soon would you want to get
-            started?</p>
-        <div>
-            <label class="block mb-2">
-                <input type="radio" name="Start_date_preference" value="immediately" class="mr-2"> Immediately
-            </label>
-            <label class="block mb-2">
-                <input type="radio" name="Start_date_preference" value="soon" class="mr-2"> Soon - next 30 days
-            </label>
-            <label class="block">
-                <input type="radio" name="Start_date_preference" value="later" class="mr-2"> Later - next 4-8 months
-            </label>
-        </div>
 
         <!-- Budget -->
-        <p class="mt-12">Based on your current budget, if this was the perfect opportunity for you to free your body,
-            rise into your power, and liberate your full Authentic expression, would you have a budget of 3,700 USD to
-            make it possible? (With the option of a monthly payment plan)</p>
+        <p class="mt-12">Do you have a budget of at least 3,800 USD to invest in this training? (payment plan available)</p>
         <div>
             <label class="block mb-2">
                 <input type="radio" name="Budget_commitment" value="Yes" class="mr-2"> Yes
@@ -301,7 +170,7 @@ seo:
 
         <!-- Additional Information -->
         <fieldset class="mt-12">
-            <legend class="mb-2">Is there anything else that you feel I should know before considering your application?
+            <legend class="mb-2">Is there anything else I should know in consideration of your application?
             </legend>
             <div>
                 <label class="block mb-2">
@@ -309,54 +178,6 @@ seo:
                 </label>
             </div>
         </fieldset>
-
-        <!-- How did you hear about me? -->
-        <fieldset class="mt-12">
-            <legend class="mb-2">
-                Where did you hear about me?
-            </legend>
-            <div class="mb-4">
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="Social Media" class="mr-2">
-                    Social Media
-                </label>
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="Guest Appearance" class="mr-2">
-                    Guest Appearance
-                </label>
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="Podcast" class="mr-2">
-                    Podcast
-                </label>
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="Referral" class="mr-2">
-                    Referral
-                </label>
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="In-Person Event" class="mr-2">
-                    In-Person Event
-                </label>
-                <label class="block mb-2">
-                    <input type="checkbox" name="Hearing_source[]" value="Other" id="otherCheckbox2" class="mr-2">
-                    Other (please specify)
-                </label>
-                <input type="text" name="Other_hearing_source" id="otherText2"
-                    class="w-full px-1 py-2 border bg-transparent border-white text-feature mt-2 hidden" placeholder="Please specify" disabled>
-            </div>
-        </fieldset>
-
-        <script>
-            document.getElementById('otherCheckbox2').addEventListener('change', function () {
-                var otherText = document.getElementById('otherText2');
-                if (this.checked) {
-                    otherText.classList.remove('hidden');
-                    otherText.disabled = false;
-                } else {
-                    otherText.classList.add('hidden');
-                    otherText.disabled = true;
-                }
-            });
-        </script>
 
         <button type="submit" class="button mt-4">Submit</button>
     </form>
