--- a/ttc-application.html
+++ b/ttc-application.html
@@ -8,7 +8,7 @@ seo:
 <section class="p-10p">
     <h1 class="text-lg-serif text-feature mb-12">Mana Movement Facilitator Application</h1>
 
-    <form id="mentorship-application" name="mentorship-application" method="post" data-netlify="true"
+    <form id="ttc-application" name="ttc-application" method="post" data-netlify="true"
         action="/application-ttc-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
 
         <input type="hidden" name="form-name" value="mentorship-application">
