--- a/ttc-application.html
+++ b/ttc-application.html
@@ -11,7 +11,7 @@ seo:
     <form id="ttc-application" name="ttc-application" method="post" data-netlify="true"
         action="/application-ttc-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
 
-        <input type="hidden" name="form-name" value="mentorship-application">
+        <input type="hidden" name="form-name" value="ttc-application">
         <p class="hidden">
             <label>Don’t fill this out if you're human: <input name="bot-field"></label>
         </p>
@@ -64,17 +64,6 @@ seo:
             <div>
                 <label class="block">
                     <textarea name="What_is_your_experience_with_Mana_Movement" required class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
-                </label>
-            </div>
-        </fieldset>
-
-        <!-- Challenges -->
-        <fieldset class="mt-12">
-            <legend class="mb-2">How is your personal journey going right now? Tell me about the challenges you are
-                facing in your journey of personal empowerment and liberation.</legend>
-            <div>
-                <label class="block">
-                    <textarea name="Challenges_in_your_journey" required class="w-full p-2 border border-white bg-transparent text-feature h-32"></textarea>
                 </label>
             </div>
         </fieldset>
