--- a/offerings.html
+++ b/offerings.html
@@ -29,11 +29,11 @@ map:
       url: /mana-movement-maternity.html?v=2
       image_path: /uploads/icons/manamei-15.png
       button-text: Learn more
-    - title: Mana Movement Online Teacher Training (coming soon)
-      type: Online Training
+    - title: Mana Movement Online Teacher Training
+      type: next training May 12th - August 31st
       description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
-      url: /ttc-waitlist.html
-      button-text: Join the waitlist
+      url: /ttc-apply.html
+      button-text: Get more info and apply now
       image_path: /uploads/icons/manamei-16.png
 additional-offerings: 
   heading: Liberation Through Movement Offerings
