application thank you page tweaks

--- a/application-ttc-thank-you.html
+++ b/application-ttc-thank-you.html
@@ -9,9 +9,9 @@ seo:
         <h1 class="text-lg-serif text-feature">Thank You</h1>
         <div class="lg:w-[80%] mx-auto">
             <p>Congratulations on completing the Mana Movement Online Teacher Training Application!</p>
-            <p>Thank you for taking the time to thoughtfully share this information with me. I look forward to learning about you and what inspires you to take this next step in your journey back to wholeness and liberation.</p>
+            <p>Thank you for taking the time to thoughtfully share this information with me. I look forward to learning about you and what inspires you to take this next step in your journey of rising into embodied leadership.</p>
             <p>What’s the next step?</p>
-            <p>If your application qualifies, you will receive an email with a link to book your free 45-minute Connection Call with Mana Mei. During this call we will discuss teacher training details, get to know eachother, and decide if this certification course may be the perfect fit for you.</p>
+            <p>If your application qualifies, you will receive an email with a link to book your free 30-minute Connection Call with Mana Mei. During this call we will discuss teacher training details, get to know eachother, and decide if this certification course may be the perfect fit for you.</p>
             <p>Please allow 24 hours for a response and I look forward to taking this next step with you!</p>
             <p><strong>Please take a moment in a quiet space to carefully read through the Mana Movement Teacher Training PDF, which outlines the details of the program, how it works, what you receive, and the investment requirements.</strong></p>
             <a class="button mt-4" target="_blank" href="https://www.canva.com/design/DAF2WCjLuVw/-yMr1mM7ocMp_-R6vJ86BQ/view?utm_content=DAF2WCjLuVw&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he1f72b7099">Download the Mana Movement Teacher Training PDF</a>
