updates.  Still need to update waitlist button and add popup and banner

--- a/offerings.html
+++ b/offerings.html
@@ -32,8 +32,8 @@ map:
     - title: Mana Movement Online Teacher Training
       type: next training May 12th - August 31st
       description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
-      url: /ttc-apply.html
-      button-text: Get more info and apply now
+      url: /ttc-waitlist.html
+      button-text: Join the Waitlist
       image_path: /uploads/icons/manamei-16.png
 additional-offerings: 
   heading: Liberation Through Movement Offerings
