update date to Online Program

--- a/offerings.html
+++ b/offerings.html
@@ -30,7 +30,7 @@ map:
       image_path: /uploads/icons/manamei-15.png
       button-text: Learn more
     - title: Mana Movement Online Teacher Training
-      type: next training May 12th - August 31st
+      type: Online Program
       description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
       url: /ttc-waitlist.html
       button-text: Join the Waitlist
