--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -37,6 +37,13 @@ who-its-for:
     background_image: /uploads/images/women-who-feel-3.png
     image_focus: center
     overlay_style: dark
+about: 
+  description_html: |
+    <p><strong>“This is for Women who Feel”</strong> is a Masterclass for women who have a desire to get better at feeling through gaining support, understanding, and applicable tools for their every day life.</p>
+    <p>Whether you need help navigating anxiety and overwhelm, or if you need help learning how to express your emotions in a healthy way, this masterclass will support you in RECLAIMING your power within your Emotional Body.</p>
+    <p>Through this Movement Masterclass you will receive in-depth knowledge about the Emotional Body, how to work with it, and get the chance to experience simple, yet potent embodied movement tools and practices that you can apply to your every day experience of life.</p>
+    <p>These tools will support you in navigating your life with more ease and grace, no matter what meets you along your path!</p>
+    <p>Through this masterclass, you will be held in a container of SAFETY and FREEDOM to be guided to take the driver seat of your own healing journey by connecting with the immense wisdom and healing power within your own body.</p>
 inside-the-course:
   heading: Inside confiDance
   description_html: >-
@@ -83,8 +90,8 @@ cta:
   description_html: >-
     <p>Are you ready to move through life feeling deeply safe and expansively free?</p><p>confi<em>Dance</em> will help you reclaim your radiant expression!​</p><p>To meet every moment of life with a sense of EXPANSION, softness, and openness, while also being ANCHORED, grounded, and centered.</p><p>To cultivate more safety and freedom in your body, and in your capacity to express your true self through the way you move, both in your dance and in every moment of your life!</p>
   button:
-    text: Enroll Now
-    url: https://manamei.teachable.com/p/confidance
+    text: Register Now
+    url: https://manamei.mysamcart.com/checkout/this-is-for-women-who-feel
   background-image:
     background_image: /uploads/images/manamei-93.JPEG
     background-position: 
@@ -136,6 +143,15 @@ seo:
 
   </div>
 
+</section>
+
+
+<!-- About this Course -->
+<section class="section-padding">
+  <div>{{page.about.description_html}}</div>
+  <div class="mt-8">
+    <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
+  </div>
 </section>
 
 <!-- Inside the Course -->
