--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -45,17 +45,17 @@ about:
     <p>These tools will support you in navigating your life with more ease and grace, no matter what meets you along your path!</p>
     <p>Through this masterclass, you will be held in a container of SAFETY and FREEDOM to be guided to take the driver seat of your own healing journey by connecting with the immense wisdom and healing power within your own body.</p>
 inside-the-course:
-  heading: Inside confiDance
+  heading: Hi, I’m Mana Mei!
   description_html: >-
-    <p>Easy to follow Step-by-Step Process for Embodied Liberation</p>
-  module:
-    - title: Step 1 - Activate the Dance of the Arms
-    - title: Step 2 - Activate the Dance of the Spine
-    - title: Step 3 - Activate the Dance of the Hips & Legs
-    - title: Step 4 - Activate your FULL BODY Free Dance
+    <p>I am an International Feminine Embodied Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
+    <p>Liberation Through Movement has supported <strong><em>thousands</em></strong> of women around the world along their healing journeys by providing a safe space to explore the beautiful, yet complex, inner landscape of our physical and energetic body.</p>
+    <p>I have also worked intimately as personal Feminine Embodiment mentor for over 100 women through my keystone offering- the Liberation Through Movement Mentorship, a life-changing, deeply transformational 3-month Live Online Program! This is my favorite!</p>
+    <p>My hope is that during this Masterclass, I can give you a taste of the sweet nectar of this potent movement medicine and open you up to your own potential to bring movement into your every day life as a powerful tool for healing and transformation.</p>
+    <p>For only a small investment of <strong><em>$19</em></strong>, you have the unique opportunity to join me and your global sisterhood LIVE for this Masterclass to receive powerful embodiment knowledge and practices that will support you in your healing journey for the rest of your life. It is so powerful when we come together to share our energy in these expansive containers that reach around the world…Remember- you are not alone!</p>
+    <p>In the case that you cannot join us live, no worries! Every woman who registers and pays will also receive the recording of the Masterclass which will be available to watch on replay for ONE WEEK after the Masterclass.</p>
   background-image:
-    background_image: /uploads/backgrounds/manamei-4.jpg
-    image_focus: center
+    background_image: /uploads/images/women-who-feel-4.png
+    image_focus: left
 testimonials:
   background_image: /uploads/images/manamei-93.JPEG
   overlay_style: dark
@@ -158,7 +158,7 @@ seo:
 <section>
 
   <!-- Mobile Image (hidden on desktop) -->
-  <div class="bg-image-style min-h-[60vh] mt-10p mx-10p md:hidden" style="background-image: url('/uploads/images/manamei-92.JPEG');"></div>
+  <div class="bg-image-style min-h-[60vh] mt-10p mx-10p md:hidden" style="background-image: url('{{page.inside-the-course.background-image.background_image}}');"></div>
 
   <div class="grid lg:grid-cols-3 gap-8">
       <!-- Left Column (text) -->
@@ -167,26 +167,6 @@ seo:
               <h2 class="text-lg-serif text-feature">{{page.inside-the-course.heading}}</h2>
               <p>{{page.inside-the-course.description_html}}</p>
           </div>
-          <ul class="dropdown-menu">
-              {% for item in page.inside-the-course.module %}
-              <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item {% endif %}">
-                  <button @click="open = ! open" class="flex justify-between w-full">
-                      <h3 class="mr-8 text-left">{{item.title}}</h3>
-
-                      <span x-show="!open">→</span>
-                      <span x-show="open">&nbsp;&nbsp;↓</span>
-                  </button>
-                  <div x-show="open" @click.outside="open = false" class="flex justify-between">
-                      <div class="justify-start">
-                          <p><em>{{ item.description_html | safe }}</em></p>
-                      </div>
-                      {% if item.time.show == true %}
-                      <div class="justify-end">({{item.time.hours}}:{{item.time.minutes}})</div>
-                      {% endif %}
-                  </div>
-              </li>
-              {% endfor %}
-          </ul>
           <div class="mt-8">
               <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
           </div>
@@ -194,7 +174,7 @@ seo:
 
       <!-- Right Column (image) -->
       <div class="bg-image-style min-h-[60vh] lg:bg-[bottom]"
-          style="background-image: url('uploads/images/manamei-95.JPEG');">
+          style="background-image: url('{{page.inside-the-course.background-image.background_image}}');">
       </div>
   </div>
 </section>
